// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup is the same 1`] = `
<div
  className="sc-gsnTZi umynZ"
>
  Hover popup
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Failure is the same 1`] = `
<div
  className="sc-gsnTZi dTwtyh"
>
  Failure
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Success is the same 1`] = `
<div
  className="sc-gsnTZi fCKVBl"
>
  Success
</div>
`;
